--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
       td {
         border: 1px solid black;
       }
+      .spain {
+        font-weight: bold;
+      }
     </style>
   </head>
   <body>
@@ -57,22 +60,23 @@
         <td>10.4</td>
         <td>10.8</td>
       </tr>
-      <tr>
-        <th>España</th>
-        <th>11.9</th>
-        <th>10.6</th>
-        <th>11.5</th>
-        <th>11.5</th>
-        <th>11</th>
-        <th>9.2</th>
-        <th>8.5</th>
-        <th>8.2</th>
-        <th>11.3</th>
-        <th>17.9</th>
-        <th>19.9</th>
-        <th>21.4</th>
-        <th>24.8</th>
-        <th>26.1</th>
+      <tr class="spain">
+        <td>España</td>
+
+        <td>11.9</td>
+        <td>10.6</td>
+        <td>11.5</td>
+        <td>11.5</td>
+        <td>11</td>
+        <td>9.2</td>
+        <td>8.5</td>
+        <td>8.2</td>
+        <td>11.3</td>
+        <td>17.9</td>
+        <td>19.9</td>
+        <td>21.4</td>
+        <td>24.8</td>
+        <td>26.1</td>
       </tr>
       <tr>
         <td>Grecia</td>
@@ -125,7 +129,6 @@
         <td>4.3</td>
         <td>4</td>
       </tr>
-      <tr></tr>
     </table>
     <br />
     <footer>Fuente: <a href="/">Índice de desempleo anual,</a> Eurostat</footer>
